adding bot / updating scheme

--- a/UITestingDemo.xcodeproj/xcshareddata/xcschemes/UITestingDemo.xcscheme
+++ b/UITestingDemo.xcodeproj/xcshareddata/xcschemes/UITestingDemo.xcscheme
@@ -47,6 +47,14 @@
                BlueprintName = "UITestingDemoUITests"
                ReferencedContainer = "container:UITestingDemo.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "UITestingDemoUITests/testExample()">
+               </Test>
+               <Test
+                  Identifier = "UITestingDemoUITests/testRunIntro()">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
       <MacroExpansion>
