--- a/UITestingDemo.xcodeproj/xcshareddata/xcschemes/UITestingDemo.xcscheme
+++ b/UITestingDemo.xcodeproj/xcshareddata/xcschemes/UITestingDemo.xcscheme
@@ -26,10 +26,11 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "011BE19F1BA861200057BD6A"
