--- a/UITestingDemo.xcodeproj/xcshareddata/xcschemes/UITestingDemo.xcscheme
+++ b/UITestingDemo.xcodeproj/xcshareddata/xcschemes/UITestingDemo.xcscheme
@@ -40,7 +40,7 @@
             </BuildableReference>
          </TestableReference>
          <TestableReference
-            skipped = "NO">
+            skipped = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "011BE1AA1BA861200057BD6A"
