--- a/UITestingDemo.xcodeproj/xcshareddata/xcschemes/UITestingDemo.xcscheme
+++ b/UITestingDemo.xcodeproj/xcshareddata/xcschemes/UITestingDemo.xcscheme
@@ -56,6 +56,9 @@
                   Identifier = "UITestingDemoUITests/testFlow()">
                </Test>
                <Test
+                  Identifier = "UITestingDemoUITests/testQueryScene()">
+               </Test>
+               <Test
                   Identifier = "UITestingDemoUITests/testRunIntro()">
                </Test>
                <Test
